--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,27 @@
   <head>
     <meta charset="utf-8">
     <title>Syntactically Awesome Stylesheets - Login</title>
-    
+
     <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="styles/css/main.css">
   </head>
   <body>
-  
-    <h1>Intro to Sass</h1>
-    <!-- Your code here! -->
+    <div class="wrapper">
+      <h1>Login</h1>
+
+      <div class="form-fields">
+        <form>
+          <label for="email">Email</label>
+          <input type="text" class="warning">
+          <label for="password">Password</label>
+          <input type="password">
+          <button type="button">Login!</button>
+        </form>
+      </div>
+
+      <h2> Need to create an account? <a href="/register.html">Register now?</a></h2>
+    </div>
+
 
   </body>
 </html>
