--- a/src/register.html
+++ b/src/register.html
@@ -3,13 +3,30 @@
   <head>
     <meta charset="utf-8">
     <title>Syntactically Awesome Stylesheets - Register</title>
-    
+
     <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="styles/css/main.css">
   </head>
   <body>
-  
+
     <!-- Your code here! -->
-  
+    <div class="wrapper">
+      <h1>Login</h1>
+
+      <div class="form-fields">
+        <form>
+          <label for="email">Email</label>
+          <input type="text">
+          <label for="password">Password</label>
+          <input type="password">
+          <label for="password">Password Confirmation</label>
+          <input type="password">
+          <button type="button">Sign Up!</button>
+        </form>
+      </div>
+
+      <h2>Already have an account? <a href="/">Login now.</a></h2>
+    </div>
+
   </body>
 </html>
